Done until L8 provisional surface reflectance product

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -37,9 +37,9 @@
 
 \newacronym{rrs}{$R_{rs}$}{remote-sensing reflectance}
 
-\newacronym{iops}{IOPs}{Inherent Optical Properties}
+\newacronym{iops}{IOPs}{inherent optical properties}
 
-\newacronym{aops}{AOPs}{Apparent Optical Properties}
+\newacronym{aops}{AOPs}{apparent optical properties}
 
 \newacronym{elm}{ELM}{empirical line method}
 
@@ -72,3 +72,31 @@
 \newacronym{tss}{TSS}{total suspended solids}
 
 \newacronym{par}{PAR}{photosynthetic available radiation}
+
+\newacronym{vsf}{VSF}{volume scattering function}
+
+\newacronym{ldcm}{LDCM}{Landsat Data Continuity Mission}
+
+\newacronym{vis}{VIS}{visible}
+
+\newacronym{meris}{MERIS}{MEdium Resolution Imaging Spectrometer}
+
+\newacronym{dn}{DN}{digital number}
+
+\newacronym{dc}{DC}{digital count}
+
+\newacronym{ledaps}{LEDAPS}{Disturbance Adaptive Processing System}
+
+\newacronym{tm}{TM}{Thematic Mapper}
+
+\newacronym{etmplus}{ETM+}{Enhanced Thematic Mapper Plus}
+
+\newacronym{6s}{6S}{Second Simulation of a Satellite Signal in the Solar Spectrum}
+
+\newacronym{toa}{TOA}{top-of-atmosphere}
+
+\newacronym{qa}{QA}{quality assurance}
+
+\newacronym{aot}{AOT}{aerosol optical thickness}
+
+\newacronym{usgs}{USGS}{U.S. Geological Survey}
