Path for figure changed for new location

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -148,9 +148,9 @@
 \setlength{\marginparwidth}{3.7cm}
 
 % Added 11-15-13 ----------------------------------------
-% \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
 % \includeonly{Background_and_Theory} 
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory} 
+% \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology} 
 \usepackage{tikz} % for flow charts
   \usetikzlibrary{shapes,shapes.geometric,arrows,positioning,shadows,calc}
 
@@ -368,7 +368,7 @@ Mis amados viejitos, Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes
 %\bibliographystyle{unsrtnat}
 \bibliographystyle{apalike}
 
-\bibliography{C:/Users/Aixa/Documents/Javier/Latex/ThesisPhD/javier_bib}
+\bibliography{C:/Users/Aixa/Dropbox/Javier/Latex/ThesisPhD/javier_bib}
 
 \printindex
 \addcontentsline{toc}{chapter}{Index}
